src/scss/yuzu/yuzu.scss
$switch-orangered: #ff3c28;
$switch-deepskyblue: #0ab9e6;
$switch-yellow: #e6ff00;
$switch-deeppink: #ff3278;
$switch-lime: #1edc00;
$switch-gray: #828282;

@each $name, $color in ("orangered", $switch-orangered), ("deepskyblue", $switch-deepskyblue),
        ("yellow", $switch-yellow), ("deeppink", $switch-deeppink), ("lime", $switch-lime), ("gray", $switch-gray) {
  .switch-left-#{$name} {
    #jumbotron-leftjoy path {
      // The normal coloring for the .svg is inline, so we cannot override it normally.
      stroke: $color !important;
    }

    #logo-leftjoy path, #logo-u1 path {
      fill: $color !important;
    }
  }

  .switch-right-#{$name} {
    #jumbotron-rightjoy path {
      // The normal coloring for the .svg is inline, so we cannot override it normally.
      stroke: $color !important;
    }

    #logo-rightjoy path, #logo-u2 path {
      fill: $color !important;
    }
  }
}

#about-section {
  position: relative;
  top: -100px;
}

// TODO: Hack for links appearing as the wrong color
a:hover {
  color: lighten($blue, 5);
}

// Correctly positions the switch screen images in the overlay.
.offset-switch-overlay {
  top: 13.5%;
  left: 22.5%;
  // 100% - (22.5% * 2)
  width: 55%;
}

// Ensure that arrows consume the entire overlay's height.
.glide__arrow {
  height: 100%;
  display: flex;
  align-items: center;
}

// Fixes the backgrounds + colors of messages with headers
.message {
  background: $dark !important;
}

.message-header {
  color: $dark;
}

// Fixes multiple <p> elements in messages in content blocks
.message-header p:not(:last-child) {
  margin-bottom: 0;
}

// Adds dropdown support for messsages
.message-header.is-dropdown {
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.message-body.is-dropdown-target {
  display: none;
}

.message-body.is-dropdown-target.is-active {
  display: block !important;
}

// Make text nicer to read in articles
.content p {
  text-align: justify;
  line-height: 1.45;
}

// Fix background color of monospaced text
.content :not(pre) > code {
  background: #101010;
}

code {
  color: #FFFFFF;
  font-size: 0.875em;
  font-weight: 400;
  padding: 0.15em 0.25em 0.15em 0.25em;
  border: 1px solid #585d66;
  border-radius: 4px;
  box-shadow: 0 1px 1px rgba(0,0,0,0.125);
}

// Workaround for browsers without JavaScript for the downloads page
#install-view, #manual-package-view {
  display: none;
}

.dl-button, #platform-unsupported {
  display: none;
}

// Fix manual download button text
#view-package-listing-button {
  color: #363636;
}

